Version 1.0.0
  Bugfixes:
  - Fix handling of Oracle BFILE columns.  This was totally broken; attempts
    to select such columns resulted in the error message
    'ORA-00932: inconsistent datatypes: expected %s got %s'.
    Bug report and patch by Dominique Legendre.

Version 0.9.1 (beta), released 2011-09-14
  Bugfixes:
  - Fix incorrect use of an automatic variable for binding timestamp parameters
    in Oracle.
  - Remove unnecessary lvalue casts.
    These violate the C standard and cause errors on gcc 4.
    Per report from Dominique Legendre.
  - Fix lack of support for dropped columns in foreign table.
    oracle_fdw incorrectly assumed that the n-th PostgreSQL column corresponds
    to the n-th Oracle column.  This leads to confusion in the presence of
    dropped columns, which retain an entry in pg_attribute.
    Per report from Dominique Legendre.
  - Fix typo that caused wrong and negative sizes being assumed for longer
    Oracle columns.  This led to palloc() errors and Oracle fetch errors.
    Per report from Dominique Legendre.

Version 0.9 (beta), released 2011-08-25
  - initial release